--- a/DesignPatternImplementations/DesignPatternImplementations.csproj
+++ b/DesignPatternImplementations/DesignPatternImplementations.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StrategyPattern\StrategyPattern.csproj" />
+  </ItemGroup>
+
 </Project>
