--- a/DesignPatternImplementations/DesignPatternImplementations.csproj
+++ b/DesignPatternImplementations/DesignPatternImplementations.csproj
@@ -16,6 +16,7 @@
     <ProjectReference Include="..\FactoryMethodPattern\FactoryMethodPattern.csproj" />
     <ProjectReference Include="..\ObserverPattern\ObserverPattern.csproj" />
     <ProjectReference Include="..\StrategyPattern\StrategyPattern.csproj" />
+    <ProjectReference Include="..\TemplateMethodPattern\TemplateMethodPattern.csproj" />
   </ItemGroup>
 
 </Project>
